<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back_ground_login">

    <TextView
        android:id="@+id/txt_name_poly_gon_in_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:textStyle="bold"
        android:text="@string/name_poly_gon_dialog"
        android:fontFamily="@font/iran_sans"
        android:textColor="@color/whiteLow"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name_in_dialog_poly_gon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:textColor="@color/whiteLow"
        android:hint="@string/et_name_group"
        android:textColorHint="@color/white"
        android:maxLength="40"
        android:ellipsize="end"
        android:singleLine="true"
        android:fontFamily="@font/iran_sans"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="12dp"
        android:paddingBottom="8dp"
        android:textSize="14sp"
        android:background="@drawable/background_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_poly_gon_in_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_description_poly_gon_in_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name_in_dialog_poly_gon"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:textStyle="bold"
        android:text="@string/description_poly_gon"
        android:fontFamily="@font/iran_sans"
        android:textColor="@color/whiteLow"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_description_in_dialog_poly_gon"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:textColor="@color/whiteLow"
        android:textColorHint="@color/white"
        android:fontFamily="@font/iran_sans"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="12dp"
        android:paddingBottom="8dp"
        android:textSize="14sp"
        android:background="@drawable/background_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/txt_description_poly_gon_in_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose_color_in_dialog_poly_gon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/back_btn"
        android:textSize="12sp"
        android:fontFamily="@font/iran_sans"
        android:visibility="visible"
        android:inputType="textCapCharacters"
        android:text="@string/choose_color"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/et_description_in_dialog_poly_gon"
        app:layout_constraintStart_toEndOf="@+id/gl_start_color_in_dialog_poly_gon"
        app:layout_constraintEnd_toStartOf="@+id/gl_end_color_in_dialog_poly_gon"
        />

    <com.flask.colorpicker.ColorPickerView
        android:id="@+id/color_picker_view_in_dialog_poly_gon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:alphaSlider="true"
        app:density="12"
        app:lightnessSlider="true"
        app:wheelType="FLOWER"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose_color_in_dialog_poly_gon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lightnessSliderView="@+id/v_lightness_slider"
        app:alphaSliderView="@+id/v_alpha_slider"
        />





    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_in_dialog_poly_gon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/back_btn"
        android:layout_marginStart="18dp"
        android:textSize="12sp"
        android:fontFamily="@font/iran_sans"
        android:visibility="visible"
        android:layout_marginEnd="18dp"
        android:inputType="textCapCharacters"
        android:text="@string/save_poly_gon"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_middle_color_in_dialog_poly_gon"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose_color_in_dialog_poly_gon"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_in_dialog_poly_gon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/back_btn"
        android:layout_marginStart="18dp"
        android:textSize="12sp"
        android:fontFamily="@font/iran_sans"
        android:visibility="visible"
        android:layout_marginEnd="18dp"
        android:inputType="textCapCharacters"
        android:text="@string/cancel"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl_middle_color_in_dialog_poly_gon"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose_color_in_dialog_poly_gon"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ProgressBar
        android:id="@+id/progress_in_poly_gon_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start_color_in_dialog_poly_gon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.2"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end_color_in_dialog_poly_gon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.8"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_middle_color_in_dialog_poly_gon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>


</androidx.constraintlayout.widget.ConstraintLayout>